--- a/index.html
+++ b/index.html
@@ -348,6 +348,22 @@
             background: #2563eb;
         }
 
+        .btn-text-small {
+            background: #10b981;
+            color: white;
+            border: none;
+            border-radius: 0.375rem;
+            padding: 0.25rem 0.5rem;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: background-color 0.2s;
+            margin-left: 0.5rem;
+        }
+
+        .btn-text-small:hover {
+            background: #059669;
+        }
+
         .contact-actions {
             display: flex;
             gap: 1rem;
@@ -1030,12 +1046,7 @@
                     <span></span>
                     <span></span>
                     <span></span>
-            </div>
-                <div class="stats-compact">
-                    <span class="stat-item">Total: <span id="totalMentees">0</span></span>
-                    <span class="stat-item">Need Contact: <span id="needsContact">0</span></span>
-                    <span class="stat-item">This Week: <span id="weeklyContacts">0</span></span>
-            </div>
+                </div>
             </div>
             <div class="header-center">
             <div class="search-box">
@@ -1049,6 +1060,7 @@
 
         <!-- Dropdown Menu -->
         <div id="dropdownMenu" class="dropdown-menu">
+            <button class="menu-item" onclick="app.showStats()">📊 Statistics</button>
             <button class="menu-item" onclick="app.showBulkImportModal()">📥 Bulk Import</button>
             <button class="menu-item" onclick="app.exportData()">📤 Export Data</button>
             <button class="menu-item" onclick="document.getElementById('importFile').click()">📁 Import Data</button>
@@ -1966,6 +1978,26 @@ m 919-215-0170`;
                 }
             }
 
+            showStats() {
+                const needsContact = this.mentees.filter(m => {
+                    const info = this.getDaysAgo(m.lastContact, parseInt(m.fu) || 14);
+                    return info.days >= Math.floor((parseInt(m.fu) || 14) / 2);
+                }).length;
+
+                const weeklyContacts = this.getWeeklyStats();
+                
+                alert(`📊 Statistics\n\n` +
+                      `Total Mentees: ${this.mentees.length}\n` +
+                      `Need Contact: ${needsContact}\n` +
+                      `This Week: ${weeklyContacts}`);
+                
+                // Close the dropdown
+                const menu = document.getElementById('dropdownMenu');
+                if (menu) {
+                    menu.classList.remove('show');
+                }
+            }
+
             showContactView(menteeId) {
                 const mentee = this.mentees.find(m => m.id === menteeId);
                 if (!mentee) return;
@@ -2011,6 +2043,7 @@ m 919-215-0170`;
                                     <div class="contact-label">📱 Mobile</div>
                                     <div class="contact-value">
                                         <a href="tel:${mentee.mobile}">${mentee.mobile}</a>
+                                        <button class="btn-text-small" onclick="app.initiateContact('${mentee.id}', 'text')">📱 Text</button>
                                     </div>
                                 </div>
                             ` : ''}
@@ -2487,7 +2520,6 @@ m 919-215-0170`;
             }
 
             render() {
-                this.renderStats();
                 this.renderMenteeList();
             }
 
