--- a/index.html
+++ b/index.html
@@ -305,6 +305,18 @@
             background: #2563eb;
         }
 
+        .btn-nav:disabled {
+            background: #9ca3af;
+            color: #6b7280;
+            border: 1px solid #d1d5db;
+            cursor: not-allowed;
+            opacity: 0.6;
+        }
+
+        .btn-nav:disabled:hover {
+            background: #9ca3af;
+        }
+
         .contact-header h2 {
             margin: 0;
             color: #111827;
@@ -2152,14 +2164,14 @@ m 919-215-0170`;
                         <div class="contact-header">
                             <div class="header-left-nav">
                                 <button class="btn-back" onclick="app.render()">← Back</button>
-                                ${hasPrevious ? `<button class="btn-nav" onclick="app.navigateToPrevious('${menteeId}')">← Prev</button>` : ''}
+                                <button class="btn-nav" onclick="app.navigateToPrevious('${menteeId}')" ${!hasPrevious ? 'disabled' : ''}>← Prev</button>
                             </div>
                             <div class="contact-title">
                                 <h2>${this.escapeHtml(mentee.name)}</h2>
                                 <div class="contact-status status-${statusColor}">${statusText}</div>
                             </div>
                             <div class="header-right-nav">
-                                ${hasNext ? `<button class="btn-nav" onclick="app.navigateToNext('${menteeId}')">Next →</button>` : ''}
+                                <button class="btn-nav" onclick="app.navigateToNext('${menteeId}')" ${!hasNext ? 'disabled' : ''}>Next →</button>
                                 <button class="btn-edit" onclick="app.showEditMenteeModal('${mentee.id}')">✏️ Edit</button>
                             </div>
                         </div>
