--- a/index.html
+++ b/index.html
@@ -1906,6 +1906,7 @@ m 919-215-0170`;
                 // Always try to use template first, fallback to regular contact
                 try {
                     const templateContent = this.storage.auth.getTemplateContent();
+                    console.log('Template content loaded for Insert Text:', templateContent);
                     if (templateContent && templateContent.trim()) {
                         if (type === 'email') {
                             if (!mentee.email) return;
@@ -2059,6 +2060,8 @@ m 919-215-0170`;
 
             showTemplateEditor() {
                 const template = loadTemplate();
+                console.log('Loading template in editor:', template);
+                console.log('Template from localStorage:', localStorage.getItem('messageTemplate'));
                 let subject = '';
                 let body = '';
                 
@@ -2072,15 +2075,22 @@ m 919-215-0170`;
                             subject = line.substring(8).trim();
                         } else if (line.toLowerCase().startsWith('body:')) {
                             inBody = true;
+                            // Body starts on the next line (skip empty line after Body:)
                             if (i + 1 < lines.length) {
-                                body = lines[i + 1].trim();
+                                body = lines[i + 1];
                             }
-                        } else if (inBody && line.trim() !== '') {
-                            body += '\n' + line;
+                        } else if (inBody) {
+                            // Include all lines after Body:, even if empty
+                            if (body) {
+                                body += '\n' + line;
+                            } else {
+                                body = line;
+                            }
                         }
                     }
                 }
                 
+                console.log('Parsed template - Subject:', subject, 'Body:', body);
                 document.getElementById('templateSubject').value = subject;
                 document.getElementById('templateBody').value = body;
                 document.getElementById('templateEditorModal').classList.add('active');
